--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -590,7 +590,7 @@
 
         <div class="row no-gutters block-9">
           <div class="col-md-6 order-md-last d-flex">
-            <form class="bg-light p-4 p-md-5 contact-form" action="contact.php">
+            <form class="bg-light p-4 p-md-5 contact-form" action="contact.php" method="POST">
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Your Name" name="name" required class="control-form">
               </div>
